# GestureAmp

./: .gitignore  CMakeLists.txt  README.md  camera_feed.py  common.py  dataset.py  gesture_recognition.py  infer.py  playback.py  requirements_infer.txt  requirements_train.txt  train.py
python/: camera_feed.py  common.py  convert.py  dataset.py  requirements_run.txt  train.py
src/: camera_feed.cpp
toolchain/: rpi.cmake
